TOS and Privacy Policy [#138671515]

--- a/app/views/static_pages/_terms_of_service_content.html.haml
+++ b/app/views/static_pages/_terms_of_service_content.html.haml
@@ -1,22 +1,106 @@
 .row
   .col-xs-10.col-xs-offset-1
     .text-center
-      %h1.about-page__header.fancy Terms &amp; Conditions
-    %p.about-page__tagline Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis.
-
-    .row.about-page__subsection.with-image.image-left
-      = image_tag 'http://placehold.it/456x474'
-      .about-page__subsection-text
-        %h4 About Sub Section Header
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
-
-    .row.about-page__subsection.with-image.image-right
-      .about-page__subsection-text
-        %h4 About Sub Section Header
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
-      = image_tag 'http://placehold.it/456x474'
-
+      %h1.about-page__header.fancy Terms of Services
+    
     .row.about-page__subsection
       .about-page__subsection-text
-        %h4 About Sub Section Header
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
+        %h4 Overview
+        %p 
+          Welcome to Wrapt.com (the “Site”).  The terms, “we”, “us” and “our” used throughout the Site refer to Wrapt, Inc. (“Wrapt”). Please read the following terms of service (“Terms of Services”) as they govern your use of our Site. By using this Site, you agree to follow and be bound by the following rules. If you do not agree, please do not use this Site in any way.
+        %p
+          We reserve the right to modify these Terms of Services at any time without prior notification. Anyone who uses our Site subsequent to the changes agrees to abide by these changes accordingly. Please review this page periodically for changes. In the event we make a material change to these Terms of Services, we will indicate on the Site or by email that our Terms of Services have changed and provide a link to the updated Terms of Services. Any use of our Site at any time constitutes full acceptance of our Terms of Services.
+        %p
+          To obtain information about our privacy practices and Wrapt’s use of your personal information relating to the Site, please see our Privacy Policy, which is incorporated herein by reference.
+          %sup
+            %a(href="#citation-01")
+              1
+        %h4 Account Security
+        %p 
+          In order to access or utilize certain services available on the Site, you must create an account with a login name and password and need a credit card (or other payment method) associated with your account. You acknowledge that you are solely responsible for maintaining the confidentiality of your account login name and password, for restricting access to your account, and further acknowledge that you are solely responsible for any activity that occurs on your account and for any unauthorized use of your login credentials. By agreeing to these Terms of Services, you represent and warrant that you are at least 13 years of age. If you are under age 13, you may not, under any circumstances or for any reason, use the Site. If you are under age 18, you may only use the Site with the involvement or supervision of a parent or guardian.
+        %h4
+          Usage Restrictions
+        %p
+          Wrapt owns all copyrights and other intellectual property rights in the Site, except for certain third party content on the Site, or as otherwise expressly indicated. You agree and acknowledge that the Site and business of the Site are protected by copyrights, patents, trademarks and intellectual property rights of Wrapt, that these rights are valid and protected in all forms, media and technologies now existing or later developed, and that the Site is protected from unauthorized copying and dissemination by United States copyright law, trademark law, patent law, international conventions and other intellectual property laws. Wrapt grants you a limited license to access and make personal use of the content on this Site. All content on the Site is intended solely for the personal, noncommercial use by the users of our Site. You shall not sell, license, rent, modify, or otherwise use or exploit any aspect of the Site or any of the intellectual property of Wrapt relating to the Site or the business of the Site, including, without limitation, patents, trademarks, copyrights or other intellectual property related to the Site, for commercial use or in any way that violates Wrapt’s rights in the Site or any of the aforementioned intellectual property.
+        %p
+          In addition to any other restrictions in these Terms of Services, the following activities and conduct are strictly prohibited by you: (a) use or distribute another’s login name, password, personal information, or financial information without authorization, or otherwise engage in any activities intended to impersonate a user’s identity or contact information; (b) collect login names and contact information and/or send unsolicited commercial communications (spam); (c) attempt to decompile, decipher or reverse engineer any of the software used by Wrapt, or modify, translate, or otherwise create derivative works of any part of the Site or the services provided thereunder, or copy, rent, lease, distribute, or otherwise transfer any of the rights that you receive hereunder; or (d) assist or permit any persons in engaging in any of the activities described above;
+        %h4
+          Notice
+        %p
+          We may, at Wrapt, contact you or provide you with service-related and/or promotional notices by means of postal mail, electronic mail, general Site notifications and more using the contact information you have provided to us.
+        %h4
+          Pricing Policy
+        %p
+          Our products are sold online only and at limited quantities and availabilities. We have done our best to communicate the unique, artisanal, handmade and limited edition quality of our products but please be aware that variations in style, color, and size may occur as each item is hand-crafted. If you are not satisfied with your purchase, please review our returns section for further assistance.
+        %h4
+          Copyright Policy
+        %p
+          If you believe that any comments or content on the Site infringes your copyright or the copyright of any other party, please email us at 
+          =succeed ',' do 
+            %a(href="mailto:info@wrapt.com?Subject=ATTN: Copyright Agent")
+              info@wrapt.com
+          with “ATTN: Copyright Agent” in the subject line, and include the following information in the body of your email, along with your contact information: (a) an identification of the intellectual property claimed to have been infringed; (b) a detailed description of the material that you believe to be infringing; (c) a statement of good faith belief that the allegedly infringing use is not authorized by the intellectual property right’s owner; and (d) a statement by you, made under penalty of perjury, that the information in your email is accurate and that you are the owner of, or are authorized to act on behalf of the owner of, the intellectual property rights involved.
+        %h4
+          Shipping
+        %p
+          Wrapt charges shipping based on the rates of many US shipping options. Please allow 3-5 business days for arrivals.  Orders ship by various third parties based throughout the US.
+        %h4
+          User Submissions
+        %p
+          Wrapt strives to create an interactive relationship with the members of its Site and services. User comments, feedback, suggestions, ideas, and other submissions disclosed, submitted or offered to us at Wrapt shall be and remain Wrapt property. Users, by using the Site, assign all property rights and interests to Wrapt allowing Wrapt unlimited use, commercial or otherwise, of any comments. Furthermore, Wrapt shall be under no obligation (1) to maintain any comments in confidence; (2) to pay to users any compensation for any comments or Wrapt’s usage thereof; or (3) to respond to any user comments.
+        %p
+          Wrapt strives to create an interactive relationship with the members of its Site and services. User comments, feedback, suggestions, ideas, and other submissions disclosed, submitted or offered to us at Wrapt shall be and remain Wrapt property. Users, by using the Site, assign all property rights and interests to Wrapt allowing Wrapt unlimited use, commercial or otherwise, of any comments. Furthermore, Wrapt shall be under no obligation (1) to maintain any comments in confidence; (2) to pay to users any compensation for any comments or Wrapt’s usage thereof; or (3) to respond to any user comments.
+        %p
+          If you choose to publicly share any images of any Wrapt gift products through any social media website or other online or publicly available service, including any such image accompanied by a hash tag (i.e., a word or phrase preceded by “#”) reference using any of our trademarks or any other terms, slogans or keywords referencing Wrapt or its products, you hereby grant to Wrapt a worldwide, royalty-free, fully paid-up, non-exclusive, perpetual, irrevocable, transferable and fully sub licensable (through multiple tiers) license, without additional consideration to you or any third party, to store, reproduce, distribute, perform, and display (publicly or otherwise), create derivative works of, adapt, modify, and otherwise use and exploit such photos or content, in any format or media now known or hereafter developed, in connection with Wrapt’s (and its successors’, affiliates’ and designees’) business.
+        %p
+          We reserve the right to remove any content you post or share for any reason, in our sole discretion.
+        %h4
+          Correction of Site Errors
+        %p
+          The information on the Site may contain typographical errors or inaccuracies. We reserve the right to update any information we see fit at any time without prior notice. Please note that such errors may relate to product information, pricing and availability. In these instances, we shall have the right to terminate any orders involving pricing errors or inaccuracies. We apologize for any inconveniences.
+        %h4
+          Indemnity
+        %p
+          By use of this Site, you agree to indemnify and hold Wrapt (and its officers, directors, agents, subsidiaries, joint venturers, and employees) harmless from any claim or demand, as well as losses, expenses, damages and costs, including reasonable attorneys fees, resulting from any violation of these Terms of Services or any activity related to your account (including negligent or wrongful conduct). Wrapt reserves the right to assume the exclusive defense and control of any matter otherwise subject to indemnification by you, in which event you will cooperate fully with Wrapt in asserting any available defenses.
+        %h4
+          Arbitration Notice and Class Action Waiver
+        %p
+          YOU AGREE THAT ALL DISPUTES BETWEEN YOU AND WRAPT ARISING OUT OF OR RELATING TO YOUR RELATIONSHIP WITH WRAPT OR USE OF THE SITE WILL BE RESOLVED BY BINDING, INDIVIDUAL ARBITRATION UNDER THE AMERICAN ARBITRATION ASSOCIATION'S RULES FOR ARBITRATION OF CONSUMER-RELATED DISPUTES AND YOU WAIVE YOUR RIGHT TO PARTICIPATE IN A CLASS ACTION LAWSUIT OR CLASS-WIDE ARBITRATION; PROVIDED, HOWEVER, THAT TO THE EXTENT THAT YOU HAVE IN ANY MANNER VIOLATED OR THREATENED TO VIOLATE OUR INTELLECTUAL PROPERTY RIGHTS, WE MAY SEEK INJUNCTIVE OR OTHER APPROPRIATE RELIEF IN ANY STATE OR FEDERAL COURT IN THE STATE OF WASHINGTON.
+        %h4
+          Violations; Modification/Termination of the SITE
+        %p
+          Wrapt may terminate or suspend your access to all or part of the Site immediately and without notice, at any time, with or without cause, including without limitation for any conduct that Wrapt, in its sole discretion, believes is in violation of any applicable law or is harmful to the interests of Wrapt or any third party. Upon termination, you must cease use of the Site and all related content. Wrapt reserves the right to seek all remedies available at law and in equity for violations of these Terms of Services, including the right to block access to the Site from a particular Internet address.
+        %p
+          In the event of modification or termination of the Site, you will still be bound by your obligations under these Terms of Services, including the warranties made by you, and by the disclaimers and limitations of liability. Wrapt shall not be liable to you or any third-party for any termination of the Site or your access.
+        %h4
+          Third-Party Links
+        %p
+          To improve our Site, Wrapt may use and promote services provided by outside third parties. However, even if the third party is affiliated with Wrapt, we do not control these services and make no representations regarding any such persons or entities. We are not liable or responsible for the accuracy, completeness, timeliness, reliability or availability of, any such parties. Outside sites linked on our Site, all of which have separate privacy and data collection practices, are only for your convenience and therefore you access them at your own risk. 
+        %h4
+          Limitation of Liability
+        %p
+          To improve our Site, Wrapt may use and promote services provided by outside third parties. However, even if the third party is affiliated with Wrapt, we do not control these services and make no representations regarding any such persons or entities. We are not liable or responsible for the accuracy, completeness, timeliness, reliability or availability of, any such parties. Outside sites linked on our Site, all of which have separate privacy and data collection practices, are only for your convenience and therefore you access them at your own risk. 
+        %p
+          The Site and the products and content available thereon are provided AS IS, WHERE IS, WITHOUT REPRESENTATION OR WARRANTY.  WITHOUT LIMITING THE GENERALITY OF THE FOREGOING, ALL IMPLIED OR EXPRESS WARRANTIES, ARISING UNDER THE UNIFORM COMMERCIAL CODE OR UNDER ANY OTHER APPLICABLE LAW INCLUDING THOSE OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, ARE HEREBY DISCLAIMED IN THEIR ENTIRETY. Wrapt also expressly disclaims any warranties of title, non-infringement, as well as any warranties implied by a course of performance, course of dealing, or usage of trade.
+        %h4
+          Construction
+        %p
+          If any one or more of the provisions contained in these Terms of Services is for any reason held to be invalid, illegal or unenforceable in any respect, such invalidity, illegality, or unenforceability shall not affect any other provision of these Terms of Services, and such invalid, illegal, or unenforceable provision shall be reformed and construed so that it will be valid, legal, and enforceable to the maximum extent permitted by law, and shall not affect the validity and enforceability of any remaining provision
+        %h4
+          Contact Us
+        %p
+          Questions about the Terms of Services should be sent to us at
+          =succeed '.' do 
+            %a(href="mailto:info@wrapt.com?Subject=ATTN: Copyright Agent")
+              info@wrapt.com
+
+
+    
+    .row
+      .col-sm-12
+        .sg-references
+          .sg-reference#citation-01
+            %span.sg-reference__num
+              1.
+            =link_to "Privacy Policy", privacy_policy_path, class: 'hidden-xs hidden-sm', target: "_blank"
+            =link_to "Privacy Policy", privacy_policy_path, class: 'hidden-md hidden-lg', target: "_blank"
