--- a/app/views/static_pages/privacy_policy.html.haml
+++ b/app/views/static_pages/privacy_policy.html.haml
@@ -2,22 +2,136 @@
   .row
     .col-xs-10.col-xs-offset-1
       .text-center
-        %h1.about-page__header.fancy Privacy Policy
-      %p.about-page__tagline Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis.
-
-      .row.about-page__subsection.with-image.image-left
-        = image_tag 'http://placehold.it/456x474'
-        .about-page__subsection-text
-          %h4 About Sub Section Header
-          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
-
-      .row.about-page__subsection.with-image.image-right
-        .about-page__subsection-text
-          %h4 About Sub Section Header
-          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
-        = image_tag 'http://placehold.it/456x474'
+        %h1.about-page__header.fancy Privacy Policy for Wrapt, Inc.
+      
 
       .row.about-page__subsection
         .about-page__subsection-text
-          %h4 About Sub Section Header
-          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
+          %p
+            %em Effective November 7, 2017
+          %p 
+            At Wrapt, Inc., (the “Company”, “Wrapt” “we”, “us”, or “our”) our goal is to help you Gift Better In doing, so, we at Wrapt are committed to protecting your privacy throughout the process. Therefore, we have created this Privacy Policy (“Privacy Policy”) to describe the types of information we may collect from you when you visit Wrapt.com (the “Site”). This Privacy Policy explains our practices regarding the collection, use and disclosure of your personal information and other information collected when you use the Site, as well as the choices you have regarding our collection and use of such information. When you use the Site, you are consenting to the collection, transfer, manipulation, storage, disclosure, sharing and other uses of your information as described in this Privacy Policy. This Privacy Policy also covers our treatment of such information that our business partners share with us or that we share with our business partners.
+          %p
+            Our intention is to help you Gift Better with the information you share with us. Therefore, we want you to read this Privacy Policy carefully. By using our Site and Recommender, you are agreeing to the collection, use, disclosure, and procedures of this Privacy Policy. Note that this Privacy Policy does not apply to third party websites, services, and applications (“Third Party Services”), such as Facebook, Twitter, Pinterest, Instagram, Snapchat, and Google+, that we do not own or control, even if you access them through our Site. The information collected by Third Party Services are subject to their own privacy policies (which we encourage you to read) and we assume no responsibility for the privacy practices of such Third Party Services. By using our Site, you are agreeing to the terms of our Privacy Policy. If you do not agree, we ask that you do not use our site. 
+          %h4
+            Information We Collect
+          %p
+            When you create an account on the Site, we receive and store any information you provide to us through the Site or otherwise (for example, if you contact us by chat or by telephone). This information may include your name, email address, physical address, telephone number, password, gender, age, and any information related to your goal of giving a better gift. This may include information about your giftee, such as their personality type, their name, age, relationship to you, their interests, their email address, physical address, gender, age, telephone number and gift preferences. Additionally, when you access the Site using a mobile device, we may collect and process real-time information about your location and your mobile device, including the unique identifier for your device. Many mobile devices allow you to turn off the location services via the device’s settings menu if you prefer. We may maintain collected information indefinitely, even after your account is terminated, in accordance with applicable law and bona fide internal record retention policies. The confidentiality of this information will be maintained in accordance with industry standard business practices and commercially reasonable security measures.
+          %p
+            Wrapt encourages the sharing of Maker stories and pro-social sharing and communication and thus, you may access social networks through our Site. If you access a social network through the Site, your use of the social network is governed by such social network’s terms and conditions and privacy policies. If you access a social network through Wrapt.com, you may be asked to grant Wrapt access to certain information from your social network profile, such as your friends or contacts lists, photographs, and updates. If you access the Site through a social network, or sign in to our Site using third-party sign-in tools, certain personal information from those third-party websites or services will be shared with us in accordance with their privacy policies and your privacy settings on those third-party websites or services. We will treat such information shared with us in accordance with this Privacy Policy. Personal Information may be used by Wrapt to suggest new features and content that may be relevant to you or your giftee, for statistical analysis, or for other business purposes and/or marketing purposes
+          %p
+            When you visit the Site, we may also collect certain information by automated means, including, but not limited to, cookies. A “cookie” is a text file that websites send to a visitor’s computer or other Internet-connected device to uniquely identify the visitor’s browser or to store information or settings in the browser. We may also use third-party website analytics tools (such as Google Analytics) that collect information about user traffic on the Site.
+          %p
+            The information we may collect by automated means may include, but is not limited to, the following:
+          %ul
+            %li
+              Information about the devices you use to access the Internet (such as the IP address and the type of the device, operating system, and web browser);
+            %li
+              Information about the devices you use to access the Internet (such as the IP address and the type of the device, operating system, and web browser);
+            %li
+              The website you passed through to reach our Site;
+            %li
+              Your region or geographical area;
+            %li
+              Information on actions taken on the Site (such as page views and site navigation patterns).
+          %h4
+            How We Use the Information We Collect
+          %p
+            At Wrapt, we may use the information you provide to us to:
+          %ul
+            %li
+              Help you Gift Better; 
+            %li
+              Provide you with gift Recommendations that match your recipient;
+            %li
+              Suggest similar gifts to your gift recipients for occasions you share with us;
+            %li
+              Register you to receive emails or other Wrapt information or news; 
+            %li
+              Respond to your questions and comments and provide customer support (such as through our chat feature);
+            %li
+              Communicate with you about our services, gifts, artists, Makers or offers; 
+            %li
+              Operate, evaluate, and improve the Site, our business and the services we offer;
+            %li
+              To prevent fraud, including the unauthorized use of this Site or violations of our Terms of Service
+            %li
+              Enforce our Terms of Service and other agreements;
+            %li
+              Comply with legal requirements and industry standards.
+          %p
+            In addition to the uses described above, we may use the information collected through cookies to identify and authenticate visitors to our Site, save your Site preferences and enhance or customize your online experience with the Site. We may also combine the information we collect with publicly available information, and with that of other users of the Site. For example, we may use your and other users' non-identifiable, aggregated data to improve the services we offer, for statistical analysis, and for other business purposes. This Privacy Policy covers our use of cookies only and does not cover the use of cookies by third parties. We do not control when or how third parties place cookies on your computer.
+          %p
+            We also may use the information you disclose to us in other ways for which we provide specific notice at the time of collection.
+          %p
+            You acknowledge and agree that you have the right to disclose information regarding gift recipients to us, and have the right to consent to our use of such information for the purposes described in this Privacy Policy.
+          %h4
+            Information We Share
+          %p
+            We may disclose aggregated information about our users and gift recipients without restriction. We may disclose personal information you disclose to us to our subsidiaries, business partners and affiliates, or to contractors, service providers, agents, vendors, or trusted third parties whose products or services we think you may be interested in. Such third parties are bound by contractual obligations to keep personal information confidential and use it only for the purposes for which we disclose it to them. We may also disclose personal information to: (i) comply with any court order, law, or legal process, including to respond to any subpoena, or government or regulatory request; (ii) enforce or apply our Terms of Service and other agreements; and/or (iii) if we believe disclosure is necessary or appropriate to protect the rights, property, or safety of Wrapt, users of our Site, or others. 
+          %p
+            We also reserve the right to transfer personal information to a buyer or other transferee in the event of a merger, divestiture, restructuring, reorganization, dissolution, sale, or other transfer of some or all of our assets. Should such a sale, merger, or transfer occur, we will use reasonable efforts to direct the transferee to use personal information in a manner that is consistent with our Privacy Policy.
+          %h4
+            Payment Information
+          %p
+            If you make a purchase at Wrapt, we will collect your credit or debit card number, expiration date, and other payment details (collectively, “Payment Information”). We may provide Payment Information and other personal information to our third party payment processors in order to complete purchases made on the Site. Pursuant to the “Information We Share” section above, our third party payment processors are bound by contractual obligations to keep such personal information confidential and use it only for the purposes for which we disclose it to them. However, we are not responsible for our third party payment processors’ use of any Payment Information or other personal information they collect in connection with your transactions on the Site.
+          %h4
+            Your Choices
+          %p
+            We offer you the following choices about what information we collect from you and how we communicate with you:
+          %p
+            Cookies. Most browsers will tell you how to stop accepting new cookies, how to be notified when you receive a new cookie, and how to disable existing cookies. Please note, however, that without cookies you may not be able to take full advantage of all of the Site’s features.
+          %p
+            Marketing Emails. If we have sent you a marketing email, you may choose not to receive additional marketing emails from us by following the unsubscribe instructions contained in such email.
+          %p
+            Location and Social Media Information. You can restrict Wrapt’s collection and use of real-time information about your computer or mobile device’s location through your device’s privacy settings. You can restrict Wrapt’s access to your social network profile at any time by changing your social network privacy settings.
+          %p
+            Location and Social Media Information. You can restrict Wrapt’s collection and use of real-time information about your computer or mobile device’s location through your device’s privacy settings. You can restrict Wrapt’s access to your social network profile at any time by changing your social network privacy settings.
+          %h4
+            Accessing and Correcting Your Information
+          %p
+            You can review and change personal information you disclose to us by logging into your account and visiting your profile page. Subject to applicable law, you may have certain additional rights to request access to and receive information about the personal information you have disclosed to us, update and correct inaccuracies in such personal information, and have such personal information blocked or deleted, as appropriate.
+          %h4
+            Security
+          %p
+            Wrapt has reasonable security measures in place in an effort to protect personal information from loss, misuse, and unauthorized access, disclosure, alteration, and destruction. Please note that no electronic transmission of information can be entirely secure. We cannot guarantee that the security measures we have in place will never be defeated or fail, or that such measures will always be sufficient or effective. Any transmission of information over the internet is at your own risk. We are not responsible for circumvention of any Site privacy settings or our security measures, or any actions of third parties.
+          %p
+            Your account information will be protected by a password for your privacy and security. To limit unauthorized access to your account and personal information, we suggest that you select and protect your password appropriately and limit access to your computer and browser by signing off from the Site after you have finished accessing your account.
+          %h4
+            Children’s Privacy
+          %p
+            Our Site is directed towards adults. If you are under 18, you may use our Site only with the involvement of a parent or guardian. We do not knowingly collect or solicit personal information from children under the age of 13, and if we learn that we have collected personal information for a child under the age of 13, we will delete that information. If you are a child under the age of 13, please stop using the Site and do not create an account, register, or provide personal information to the Site. If you become aware that any child has provided us with personal information or has created an account, please contact us at 
+            %a(href="mailto:info@wrapt.com")
+              info@wrapt.com
+            to have the account terminated and information deleted.
+          %h4
+            Non-U.S. Site Users
+          %p
+            The Site is intended for U.S. users. If you create an account with the Site from outside the U.S., you should know that your information may be processed in the U.S. and that applicable U.S. privacy regulations may be different from those of your home country. Wrapt reserves the right to terminate accounts that originate outside of the U.S. If you are a user from a country which requires affirmative consent of users to the use of cookies, you hereby affirmatively consent to, or otherwise waive your right to affirmatively consent to, the use of cookies.
+          %h4
+            Changes to Our Privacy Policy
+          %p
+            Wrapt reserves the right to update or change this Privacy Policy at any time. If we make a material change to our Privacy Policy, we will indicate on the Site that our privacy practices have changed and will provide a link to the new policy. In the event we make a material change to how we use personal information you disclose to us, we will indicate on the Site or by email that our privacy practices have changed and will provide a link to the new policy. The date this Privacy Policy was last revised is at the top of this page. You are responsible for periodically reviewing the Site and this Privacy Policy to check for any updates or changes.
+          %h4
+            Deactivation
+          %p
+            You may deactivate your account if you wish. Please note that we will need to verify that you have the authority to deactivate the account, and activity generated prior to deactivation will remain stored by us. Should you ever decide to deactivate your account, you may do so by emailing 
+            =succeed '.' do 
+              %a(href="mailto:info@wrapt.com")
+                info@wrapt.com
+            If you deactivate your account, any association between your account and information we store will no longer be accessible through your account. However, any activity on your account prior to deletion will remain stored on our servers.
+          %h4
+            Contact Us
+          %p
+            If you have any questions about this Privacy Policy or our privacy practices or data use, or wish to change your options, you may email us at 
+            %a(href="mailto:info@wrapt.com")
+              info@wrapt.com
+            or write to us at:
+            %br
+            Wrapt, Inc.
+            %br
+            2955 Tilden St NW
+            %br
+            Washginton, DC 20008
+
+      
