--- a/app/assets/stylesheets/modules/_about_pages.scss
+++ b/app/assets/stylesheets/modules/_about_pages.scss
@@ -14,7 +14,7 @@
 .about-page__header.fancy {
   display: inline-block;
   padding: 0px 40px 20px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
   border-bottom: solid 2px $tan-001;
   color: $gray-010;
 }
@@ -23,7 +23,7 @@
 }
 .about-page__tagline {
   font-size: 20px;
-  margin: 40px auto;
+  margin: 0 auto 40px;
   text-align: center;
   max-width: 720px;
   color: $gray-007;
