--- a/app/assets/stylesheets/modules/_modals.scss
+++ b/app/assets/stylesheets/modules/_modals.scss
@@ -5,7 +5,7 @@
   width: 100%;
   @media(max-width: $screen-xs-max) {
     max-width: 100%;
-    height: 100%;
+    min-height: 100%;
     margin: 0px auto;
   }
 }
