add returns policy [#152818351]

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -12,6 +12,8 @@
               = link_to "Privacy Policy", privacy_policy_path
             %li.footer__link-item
               = link_to "Terms of Service", terms_of_service_path
+            %li.footer__link-item
+              = link_to "Returns Policy", returns_policy_path
     .row
       .col-xs-12.footer__social-links.mt2
         %a.footer__social_link(href="https://facebook.com/GiftWrapt" target="_blank")
