--- a/app/views/admin/reports/_filters.haml
+++ b/app/views/admin/reports/_filters.haml
@@ -13,6 +13,9 @@
           %label User activity for the week of:
           = select_tag :weeks_ago, options_for_select(week_options, @weeks_ago), onchange: "this.form.submit();"
 
-        -#.form-group
-        -#  %label Giftee's ID:
-        -#  %input{name: :giftee_id}
+        .form-group
+          %label Giftee's ID:
+          %input{name: :giftee_id, value: params[:giftee_id]}
+
+        .form-group
+          %input{type: :submit}
