hotfix for admin report filter bug that I found testing on production

--- a/app/views/admin/reports/_activity_report_details.haml
+++ b/app/views/admin/reports/_activity_report_details.haml
@@ -10,7 +10,7 @@
             non_random_gifts = profile.gift_recommendations.reject(&:random?).map(&:gift)
           %tr.active
             %th{colspan: 3}
-              = profile.owner.email
+              = profile.owner&.email
               - if profile.name.present?
                 for #{profile.name} (#{profile.id})
               - if profile.email.present?
