--- a/app/views/layouts/_social_tags.haml
+++ b/app/views/layouts/_social_tags.haml
@@ -1,7 +1,7 @@
 -# Open Graph tags for Facebook, Pinterest, Twitter
-%meta{:content => "http://www.wrapt.com/", :property => "og:url"}/
+%meta{:content => "https://www.wrapt.com/", :property => "og:url"}/
 %meta{:content => "Give Better, Give Wrapt.", :property => "og:title"}/
-%meta{:content => "Wrapt is coming soon. Join our community of family and friends and be one of the first to try it.", :property => "og:description"}/
-%meta{:content => asset_url('hero-image.jpg'), :property => "og:image"}/
-%meta{:name => 'og:width', :content => 1440}
-%meta{:name => 'og:height', :content => 742}
+%meta{:content => "Need a gift whisperer to help you shop for her this holiday? Come to wrapt.com for handmade, artisanal gifts she will love.", :property => "og:description"}/
+%meta{:content => asset_url('hero-image-v2-1536.png'), :property => "og:image"}/
+%meta{:name => 'og:width', :content => 1536}
+%meta{:name => 'og:height', :content => 1024}
