--- a/app/views/admin/reports/_filters.haml
+++ b/app/views/admin/reports/_filters.haml
@@ -4,6 +4,7 @@
     end_date = weeks_ago.weeks.ago.end_of_week.strftime('%B %d, %Y')
     ["#{begin_date} - #{end_date}", weeks_ago]
   end
+  week_options << ['All Time', -1]
 
 .row
   .col-sm-12
@@ -11,7 +12,7 @@
       = form_tag url_for, method: :get, class: 'form-inline' do
         .form-group
           %label User activity for the week of:
-          = select_tag :weeks_ago, options_for_select(week_options, @weeks_ago), onchange: "this.form.submit();"
+          = select_tag :weeks_ago, options_for_select(week_options, @weeks_ago)
 
         .form-group
           %label Giftee's ID:
