[#152846797] Fixed reporting timezone.

--- a/app/views/admin/reports/_activity_report_details.haml
+++ b/app/views/admin/reports/_activity_report_details.haml
@@ -48,7 +48,7 @@
           - events.each do |event|
             %tr
               %td
-              %td{style: 'width: 200px;'}= event[:ts].strftime('%m/%d/%Y %I:%M %p')
+              %td{style: 'width: 200px;'}= format_datetime(event[:ts])
               %td
                 - case event[:type]
                 - when 'question_answered'
