sign in copy and layout changes

--- a/app/assets/stylesheets/_helpers.scss
+++ b/app/assets/stylesheets/_helpers.scss
@@ -2,3 +2,7 @@
 @import "helpers/mixins";
 @import "helpers/margins_padding";
 @import "bootstrap/mixins";
+
+.display-inline-block {
+  display: inline-block;
+}
