--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -2,20 +2,21 @@
   .row
     .col-xs-12
       .quiz-complete__text.pa3.text-center
-        %h1 Terrific, now we have all the information we need to make gift recommendations for #{@survey_response.giftee_name}.
+        %h1 Terrific, we have gift recommendations for #{@survey_response.giftee_name}.
 
 
       = simple_form_for @survey_response_completion, url: with_invitation_scope(giftee_survey_completion_path(@profile, @survey_response)), html: {class: 'quiz-complete__form'} do |form|
         .pa4
           - unless current_user&.active?
             .row
-              .col-sm-6
-                %h4 Create Your Account
-              .col-sm-6{style: 'text-align: right'}
-                Already Have an Account?
-                - return_to = create_via_redirect_giftee_survey_completion_path(@profile, @survey_response)
-                = link_to new_user_session_path(return_to: return_to), data: {loads_in_pjax_modal: true, toggle: "fade out", target: '.top-navigation__menu'} do
-                  Sign In
+              .col-sm-12
+                .create-and-sign-in.mb2
+                  %h4.create-account Create Your Account
+                  .already-have-account
+                    Already Have an Account?
+                    - return_to = create_via_redirect_giftee_survey_completion_path(@profile, @survey_response)
+                    = link_to new_user_session_path(return_to: return_to), data: {loads_in_pjax_modal: true, toggle: "fade out", target: '.top-navigation__menu'} do
+                      Sign In
 
             .row
               .col-sm-6
