--- a/app/views/layouts/_alerts.haml
+++ b/app/views/layouts/_alerts.haml
@@ -1,11 +1,11 @@
 - if notice.present?
   .alert.alert-success.alert-dismissable{:role => "alert"}
-    = notice
+    = sanitize notice, tags: %w/a/
     %button.close{"aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
       %span{"aria-hidden" => "true"} &#215;
 
 - if alert.present?
   .alert.alert-danger.alert-dismissable{:role => "alert"}
-    = alert
+    = sanitize alert, tags: %w/a/
     %button.close{"aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
       %span{"aria-hidden" => "true"} &#215;
