--- a/app/views/password_reset_requests/new.haml
+++ b/app/views/password_reset_requests/new.haml
@@ -10,6 +10,6 @@
         = form.input :email, label: 'Email Address'
 
       .form-actions
-        = form.submit 'Submit', class: 'btn btn-primary btn-full-width'
+        = form.submit 'Get Password Reset Email', class: 'btn btn-primary btn-full-width'
       
       %p.text-center.mt4.mb0= link_to 'Return to Sign in', new_user_session_path, data: {loads_in_pjax_modal: true}
