--- a/app/views/password_reset_requests_mailer/reset_password_email.text.haml
+++ b/app/views/password_reset_requests_mailer/reset_password_email.text.haml
@@ -1,6 +1,6 @@
-Hello from Wrapt,
+Wrapt password reset
 
-We received a request to send you an email so you can reset your Wrapt password.
+Need help signing back in to Wrapt?
 
 Click here to reset:
 =@reset_password_url
