--- a/app/views/password_reset_requests_mailer/reset_password_email.html.haml
+++ b/app/views/password_reset_requests_mailer/reset_password_email.html.haml
@@ -2,10 +2,16 @@
   %table{style: "background-color: #F2F5F9; max-width: 700px; min-width: 90%; margin: 0 auto;"}
     %tr
       %td{style: "padding: 40px;"}
-        %h1{style: "font-size: 32px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center;"} 
-          Hello from Wrapt
+        %h1{style: "font-size: 32px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center;"}
+          Wrapt password reset
 
-        %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"} 
-          We received a request to send you an email so you can reset your Wrapt password:
+        %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
+          Need help signing back in to Wrapt?
 
-        = link_to "Reset Your Password", @reset_password_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
+        %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
+          Click here to reset your password:
+          = link_to @reset_password_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
+        %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
+          Sincerely,
+          %br
+          Team Wrapt
