--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -5,6 +5,8 @@
         %h1 Terrific, we have gift recommendations for #{@survey_response.giftee_name}.
 
 
+      - if @existing_user
+        = render 'existing_user'
       = simple_form_for @survey_response_completion, url: with_invitation_scope(giftee_survey_completion_path(@profile, @survey_response)), html: {class: 'quiz-complete__form'} do |form|
         .pa4
           - unless current_user&.active?
@@ -48,11 +50,13 @@
                        param_val=='1'
                     end
                   = wrapt_styled_checkbox('1', 'survey_response_completion[user_terms_of_service_accepted]', checked, {label: label, data: {}})
-          - if current_user&.active?
-            = form.submit 'View Gift Recommendations'.upcase.html_safe, class: 'btn btn-primary btn-sm center-block'
-          - else
-            = form.submit 'Create Profile &amp; View Gift Recommendations'.upcase.html_safe, class: 'btn btn-primary btn-sm center-block'
-
+          :ruby
+            submit_button_label = if current_user&.active?
+              'View Gift Recommendations'.upcase
+            else
+              'Create Profile & View Gift Recommendations'.upcase
+            end
+          = form.submit submit_button_label, class: 'btn btn-primary btn-sm center-block'
 - if @render_loading_spinner
   = render 'application/loading', hidden: false
   = content_for :page_js do
